--- a/АудитБезопасности/аудитбезопасности.рф/Материалы/аудитбезопасности.рф/templates/ja_business/core/themes/rainbow/css/template.css
+++ b/АудитБезопасности/аудитбезопасности.рф/Материалы/аудитбезопасности.рф/templates/ja_business/core/themes/rainbow/css/template.css
@@ -15,7 +15,7 @@
 
 #ja-header .wrap-inner1 { background: url(../images/header-bg-layer2.jpg) no-repeat top center; }
 
-h1.logo a { background: url(../images/logo.png) no-repeat left; }
+h1.logo a { background: url(../images/auditb.png) no-repeat left; }
 
 /* Top navigation ---*/
 #ja-topheader ul li { background: url(../images/line-menu.png) no-repeat right center; }
