--- a/trunk/АудитБезопасности/аудитбезопасности.рф/Материалы/аудитбезопасности.рф/templates/ja_business/css/template.css
+++ b/trunk/АудитБезопасности/аудитбезопасности.рф/Материалы/аудитбезопасности.рф/templates/ja_business/css/template.css
@@ -877,11 +877,11 @@ h1.logo, div.logo-text h1 { font-size: 250%; line-height: 1; margin-left: 10px; 
 
 /* Logo Image ---*/
 h1.logo a {
-	background: url(../images/logo.png) no-repeat left;
+	background: url(../images/auditb.png) no-repeat left;
 	display: block;
-	height: 66px;
-	margin: 30px 0 15px;
-	width: 188px;
+	height: 49px;
+	margin: 40px 44px 22px;
+	width: 144px;
 }
 
 /* Logo Text ---*/
